--- a/force-app/main/default/lwc/portfolioWorkExperienceTab/portfolioWorkExperienceTab.html
+++ b/force-app/main/default/lwc/portfolioWorkExperienceTab/portfolioWorkExperienceTab.html
@@ -1,3 +1,46 @@
 <template>
-    <h1>I am working experience</h1>
+    <ul class="slds-timeline">
+        <template for:each={workExperienceList} for:item="work">
+            <li key={work.id}>
+                <div class="slds-timeline__item_expandable slds-timeline__item_task slds-is-open">
+                    <span class="slds-assistive-text">task</span>
+                    <div class="slds-media">
+                        <div class="slds-media__figure">
+                            <button class="slds-button slds-button_icon">
+                                <lightning-icon icon-name='utility:switch' alternative-text='switch' size='x-small' title='switch'></lightning-icon>
+                            </button>
+                            <div class="slds-icon_container slds-icon-standard-task slds-timeline__icon" title="task">
+                                <lightning-icon icon-name='action:new_task' alternative-text='new_task' size='small' title='new_task'></lightning-icon>
+                            </div>
+                        </div>
+                        <div class="slds-media__body">
+                            <div class="slds-grid slds-grid_align-spread slds-timeline__trigger">
+                                <div class="slds-grid slds-grid_vertical-align-center slds-truncate_container_75 slds-no-space">
+                                    <h3 class="slds-truncate" title={work.Title}>
+                                        <strong>{work.Title}</strong>
+                                    </h3>
+                                </div>
+                                <div class="slds-timeline__actions slds-timeline__actions_inline">
+                                    <template if:true={work.IsCurrent}>
+                                        <p class="slds-timeline__date">{work.JobStartDate} - Current</p>
+                                    </template>
+                                    <template if:false={work.IsCurrent}>
+                                        <p class="slds-timeline__date">{work.JobStartDate} - {work.JobEndDate}</p>
+                                    </template>
+                                </div>
+                            </div>
+                            <p class="slds-m-horizontal_xx-small">
+                                {work.CompanyName} | {work.WorkLocation}
+                            </p>
+                            <article class="slds-box slds-timeline__item_details slds-theme_shade slds-m-top_x-small slds-m-horizontal_xx-small" id="event-item-base-72">
+                                <div>
+                                    <c-portfolio-string-to-html content={work.Description}></c-portfolio-string-to-html>
+                                </div>
+                              </article>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </template> 
+    </ul>
 </template>
