Update user detail with current company information

--- a/force-app/main/default/lwc/portfolioUserDetails/portfolioUserDetails.html
+++ b/force-app/main/default/lwc/portfolioUserDetails/portfolioUserDetails.html
@@ -18,7 +18,7 @@
             </lightning-layout-item>
 
             <lightning-layout-item size="12" medium-device-size="4" large-device-size="3">
-                <lightning-output-field field-name="Mobile_Number__c"></lightning-output-field>
+                <lightning-output-field field-name="Current_Company__c"></lightning-output-field>
             </lightning-layout-item>
         </lightning-layout>
     </lightning-record-view-form>
